--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
+    "cldr-data": "^36.0.1",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
@@ -65,6 +66,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
+    "systemjs-plugin-json": "^0.3.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-typography": "^3.1.0",
