--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "lucide-react": "^0.292.0",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
+    "mongoose": "^8.3.2",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "node-adodb": "^5.0.3",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
