--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
+    "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.292.0",
     "moment": "^2.30.1",
@@ -46,6 +47,7 @@
     "mongoose": "^8.3.2",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
+    "openmeteo": "^1.1.3",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
