--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -26,6 +28,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@syncfusion/ej2-react-schedule": "^24.2.4",
@@ -36,11 +39,12 @@
     "chart.js": "^4.4.0",
     "class-variance-authority": "^0.7.0",
     "cldr-data": "^36.0.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
-    "embla-carousel-react": "^8.0.2",
-    "framer-motion": "^11.0.5",
+    "embla-carousel-react": "^8.1.3",
+    "emoji-mart": "^5.6.0",
+    "framer-motion": "^11.2.10",
     "lucide-react": "^0.292.0",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
@@ -52,10 +56,13 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.48.2",
-    "tailwind-merge": "^2.0.0",
+    "react-multi-carousel": "^2.8.5",
+    "tailwind-merge": "^2.3.0",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
