--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.1",
-    "@syncfusion/ej2-react-schedule": "^24.2.4",
+    "@syncfusion/ej2-react-schedule": "^24.2.8",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.10.7",
     "@types/bcrypt": "^5.0.2",
@@ -50,16 +50,16 @@
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.3.2",
-    "next": "14.0.2",
+    "next": "^14.2.4",
     "next-auth": "^4.24.5",
     "openmeteo": "^1.1.3",
     "query-string": "^8.1.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.48.2",
     "react-multi-carousel": "^2.8.5",
@@ -75,7 +75,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2",
+    "eslint-config-next": "^14.2.4",
     "postcss": "^8",
     "systemjs-plugin-json": "^0.3.0",
     "tailwindcss": "^3.3.0",
