--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -63,6 +64,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.48.2",
     "react-multi-carousel": "^2.8.5",
+    "react-phone-number-input": "^3.4.3",
     "tailwind-merge": "^2.3.0",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
@@ -74,11 +76,11 @@
     "@types/react-big-calendar": "^1.8.8",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.0.0",
     "eslint-config-next": "^14.2.4",
     "postcss": "^8",
     "systemjs-plugin-json": "^0.3.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-typography": "^3.1.0",
     "typescript": "^5"
