--- a/.hintrc
+++ b/.hintrc
@@ -6,6 +6,12 @@
     "typescript-config/is-valid": "off",
     "no-inline-styles": "off",
     "axe/name-role-value": "off",
-    "typescript-config/consistent-casing": "off"
+    "typescript-config/consistent-casing": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
   }
 }
