--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mongoose": "^8.3.2",
     "next": "^14.2.4",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.3.0",
     "openmeteo": "^1.1.3",
     "query-string": "^8.1.0",
     "react": "^18.3.1",
