--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.3.2",
-    "next": "^14.2.4",
+    "next": "^14.2.5",
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
     "openmeteo": "^1.1.3",
     "query-string": "^8.1.0",
+    "rc-slider": "^11.1.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
