--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.1",
     "@syncfusion/ej2-react-schedule": "^24.2.8",
-    "@tabler/icons-react": "^3.11.0",
+    "@tabler/icons-react": "^3.12.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-table": "^8.10.7",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
@@ -47,7 +50,7 @@
     "date-fns": "^3.2.0",
     "embla-carousel-react": "^8.1.3",
     "emoji-mart": "^5.6.0",
-    "framer-motion": "^11.3.9",
+    "framer-motion": "^11.3.28",
     "lucide-react": "^0.292.0",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
@@ -68,7 +71,8 @@
     "react-hook-form": "^7.48.2",
     "react-multi-carousel": "^2.8.5",
     "react-phone-number-input": "^3.4.3",
-    "tailwind-merge": "^2.4.0",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.5.2",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
