--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.292.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.3.0",
     "mongoose": "^8.3.2",
     "next": "^14.2.5",
@@ -74,7 +75,8 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "vaul": "^0.8.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
