--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-dom": "^18.3.1",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-phone-number-input": "^3.4.3",
     "react-to-print": "^3.0.1",
