--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-phone-number-input": "^3.4.3",
     "react-to-print": "^3.0.1",
+    "react-use-measure": "^2.1.1",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.2",
     "vaul": "^0.8.0",
