--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "next": "^14.2.5",
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.0",
     "openmeteo": "^1.1.3",
     "query-string": "^8.1.0",
     "rc-slider": "^11.1.3",
@@ -80,6 +81,7 @@
     "react-use-measure": "^2.1.1",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.2",
+    "twilio": "^5.4.3",
     "vaul": "^0.8.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.5"
@@ -87,6 +89,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-big-calendar": "^1.8.8",
     "@types/react-dom": "^18",
