new client table

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@heroui/chip": "^2.2.10",
+    "@heroui/react": "^2.7.2",
+    "@heroui/system": "^2.4.10",
+    "@heroui/table": "^2.2.12",
+    "@heroui/theme": "^2.4.9",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -34,6 +39,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@react-stately/data": "^3.12.1",
     "@syncfusion/ej2-react-calendars": "^27.1.52",
     "@syncfusion/ej2-react-dropdowns": "^27.1.53",
     "@syncfusion/ej2-react-schedule": "^24.2.8",
