--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@heroui/chip": "^2.2.10",
+    "@heroui/input": "^2.4.13",
+    "@heroui/pagination": "^2.2.12",
     "@heroui/react": "^2.7.2",
+    "@heroui/select": "^2.4.13",
     "@heroui/system": "^2.4.10",
     "@heroui/table": "^2.2.12",
     "@heroui/theme": "^2.4.9",
     "@hookform/resolvers": "^3.3.2",
+    "@iconify/react": "^5.2.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -59,7 +63,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
     "emoji-mart": "^5.6.0",
-    "framer-motion": "^11.3.28",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.292.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
