--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroui/chip": "^2.2.10",
     "@heroui/date-picker": "^2.3.13",
     "@heroui/input": "^2.4.13",
+    "@heroui/modal": "^2.2.12",
     "@heroui/pagination": "^2.2.12",
     "@heroui/react": "^2.7.2",
     "@heroui/select": "^2.4.13",
@@ -45,6 +46,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "@react-aria/i18n": "^3.12.5",
     "@react-stately/data": "^3.12.1",
     "@syncfusion/ej2-react-calendars": "^27.1.52",
     "@syncfusion/ej2-react-dropdowns": "^27.1.53",
