--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@heroui/autocomplete": "^2.3.16",
     "@heroui/chip": "^2.2.10",
     "@heroui/date-picker": "^2.3.13",
     "@heroui/input": "^2.4.13",
