--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@heroui/autocomplete": "^2.3.16",
+    "@heroui/badge": "^2.2.10",
     "@heroui/chip": "^2.2.10",
     "@heroui/date-picker": "^2.3.13",
     "@heroui/input": "^2.4.13",
