--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
     "emoji-mart": "^5.6.0",
+    "fast-deep-equal": "^3.1.3",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.292.0",
     "match-sorter": "^8.0.0",
